--- a/tsc3.9.7/Dockerfile
+++ b/tsc3.9.7/Dockerfile
@@ -3,3 +3,7 @@ RUN set -x
 RUN npm -v
 RUN npm install -g typescript@3.9.7
 RUN tsc -v
+RUN npm install -g tsd
+RUN tsd --version
+RUN npm install -g eslint
+RUN eslint -v
